Optimize bridge section vertical spacing to fit 100vh and prevent bottom cutoff

--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,7 @@ img {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    padding: 100px 40px;
+    padding: 60px 40px 40px;          /* Reduced padding to fit more content */
     position: relative;
     overflow: hidden;
     text-align: center;
@@ -281,9 +281,9 @@ img {
     position: relative;
     z-index: 5;
     width: 100%;
-    height: 85vh;                     /* Further increased height for better vertical span */
-    max-width: 1100px;                /* Wider for more air */
-    margin-top: 40px;
+    height: 75vh;                     /* Slightly reduced from 85vh to prevent overflow cut-off */
+    max-width: 1100px;
+    margin-top: 20px;                 /* Reduced margin */
 }
 
 .bridge-catchphrase {
@@ -299,7 +299,7 @@ img {
     position: relative;
     width: 100%;
     height: 100%;
-    margin-top: 60px;
+    margin-top: 30px;                 /* Reduced margin */
 }
 
 .acronym-item {
@@ -332,7 +332,7 @@ img {
 .item-m { color: #766a8a; top: 56%; left: 10%; animation-duration: 6.5s; animation-delay: 1.5s; }
 .item-a { color: #967117; top: 70%; right: 15%; animation-duration: 7.5s; animation-delay: 0.2s; }
 .item-r { color: #ff806e; top: 84%; left: 55%; animation-duration: 5.8s; animation-delay: 2s; }
-.item-u { color: #a7a7a7; top: 98%; left: 30%; animation-duration: 6.2s; animation-delay: 1s; }
+.item-u { color: #a7a7a7; top: 95%; left: 30%; animation-duration: 6.2s; animation-delay: 1s; }
 
 /* Background 8-color Bars */
 .bridge-bg-bars {
